--- a/OliveYoung_Backend/pom.xml
+++ b/OliveYoung_Backend/pom.xml
@@ -13,7 +13,7 @@
 	<version>1.0</version>
 	<packaging>war</packaging>
 	<name>OliveYoung_Backend</name>
-	<description>newlecture</description>
+	<description>oliveyoung</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
