--- a/OliveYoung_Backend/src/main/resources/application.properties
+++ b/OliveYoung_Backend/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+server.port = 8082
 
+## MySQL
+
+#개발
+spring.datasource.url=jdbc:mysql://localhost:3306/oliveyoung_schema?autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=1234
+#
+#운영
+#spring.datasource.url=jdbc:mysql://localhost:3306/olive9079?autoReconnect=true
+#spring.datasource.username=gnsdl2846
+#spring.datasource.password=hiftp2846!
+#spring.datasource.driver-class-name:com.mysql.cj.jdbc.Driver
+
+#mybatis
+mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
+
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=100MB
+
+#ìì´ë ë¨
+#file.upload-dir=/upload
