--- a/OliveYoung_Backend/src/main/resources/application.properties
+++ b/OliveYoung_Backend/src/main/resources/application.properties
@@ -3,15 +3,15 @@ server.port = 8082
 ## MySQL
 
 #??
-spring.datasource.url=jdbc:mysql://localhost:3306/oliveyoung_schema?autoReconnect=true
-spring.datasource.username=root
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:mysql://localhost:3306/oliveyoung_schema?autoReconnect=true
+#spring.datasource.username=root
+#spring.datasource.password=1234
 #
 #??
-#spring.datasource.url=jdbc:mysql://localhost:3306/olive9079?autoReconnect=true
-#spring.datasource.username=gnsdl2846
-#spring.datasource.password=hiftp2846!
-#spring.datasource.driver-class-name:com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/olive9079?autoReconnect=true
+spring.datasource.username=gnsdl2846
+spring.datasource.password=hiftp2846!
+spring.datasource.driver-class-name:com.mysql.cj.jdbc.Driver
 
 #mybatis
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
