에러 핸들링

--- a/OliveYoung_Backend/src/main/resources/application.properties
+++ b/OliveYoung_Backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port = 8082
 #
 #??
 spring.datasource.url=jdbc:mysql://localhost:3306/olive9079?autoReconnect=true
-spring.datasource.username=gnsdl2846
+spring.datasource.username=olive9079
 spring.datasource.password=hiftp2846!
 spring.datasource.driver-class-name:com.mysql.cj.jdbc.Driver
 
